--- a/themes/geek/layout/post.ejs
+++ b/themes/geek/layout/post.ejs
@@ -6,6 +6,12 @@
         </p>
         <hr>
     </div>
+    <p>
+        <% page.tags.toArray().map((tag, index, arr) => { %>
+          <a class="flink" href="<%= url_for(tag.path) %>">#<%= tag.name %> </a>
+        <% }) %>
+    </p>
+    <hr>
     <div class="post-content">
         <%- page.content %>
     </div>
