--- a/themes/geek/layout/index.ejs
+++ b/themes/geek/layout/index.ejs
@@ -1,5 +1,5 @@
 <div class="hd logodiv">
-    <img id="logo" class="logopng" src="img/logo.png" alt="Logo">
+    <img id="logo" class="logopng" src="img/i.png" alt="Logo">
     <p class="logot">
         <span class="logo_1">&lt;</span><span class="logo_2">/</span>
         <span class="logo_3">#</span> <%= theme.logo_title %> 
